Change script to run data_fetcher instead of onepiece_tracker

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Run daily tracker
       run: |
-        python src/onepiece_tracker.py
+        python src/data_fetcher.py
 
     - name: Commit CSV if changed
       run: |
