--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
         git config --local user.name "GitHub Action"
         git add onepiece_tracker.csv
         git diff-index --quiet HEAD || git commit -m "Update One Piece tracker [skip ci]"
-        git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/noushad223/onepiece-demand-forecaster.git HEAD:main
-   
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/noushad223/onepiece-demand-forecaster.git
+        git push origin HEAD:main   
